perf(pathfinder): replace A* data structures with Baritone-inspired design
- BinaryHeapOpenSet: custom binary heap with O(log n) update via
  heapPosition tracking, replacing PriorityQueue (O(n) update)
- SearchNode: mutable in-place search state replaces immutable Node
  records, eliminating per-expansion allocation
- Single HashMap<Long, SearchNode> (long-encoded BlockPos key) replaces
  four separate maps (openSet, closedSet, cameFrom, gCosts)
- heapPosition == -1 encodes closed state, removing the ClosedSet class
- Time-based budget (maxComputeMs, checked every 64 iterations via & 63)
  replaces node-count threshold (maxNodes), adapting to hardware speed
- NodeGraph.getNeighbors(BlockPos) returns edge costs only via
  NeighborMove records; accumulated gCost computed in AStarSearch
- MovementResult.IMPOSSIBLE singleton eliminates per-call allocation
- BlockPos.asLong() added for zero-boxing map key encoding