@@ -2,89 +2,102 @@ package fr.riege.pathfinder.astar;
 
 import fr.riege.api.goal.IGoal;
 import fr.riege.api.math.BlockPos;
-import fr.riege.api.path.MovementType;
-import fr.riege.api.path.Node;
 import fr.riege.api.path.PathStatus;
-import fr.riege.api.registry.MovementKeys;
 import org.jetbrains.annotations.NotNull;
 
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
 
 public final class AStarSearch {
 
     private final NodeGraph graph;
-    private final int maxNodes;
-    private PathStatus lastStatus = PathStatus.CANCELLED;
+    private final long maxComputeMs;
+    private PathStatus lastStatus;
+    private int nodesExplored;
 
-    public AStarSearch(@NotNull NodeGraph graph, int maxNodes) {
+    public AStarSearch(@NotNull NodeGraph graph, long maxComputeMs) {
         this.graph = graph;
-        this.maxNodes = maxNodes;
+        this.maxComputeMs = maxComputeMs;
+        this.lastStatus = PathStatus.CANCELLED;
     }
 
     public @NotNull List<BlockPos> search(@NotNull BlockPos start, @NotNull IGoal goal) {
         if (goal.isReached(start)) {
             lastStatus = PathStatus.FOUND;
-            return Collections.singletonList(start);
+            nodesExplored = 0;
+            return List.of(start);
         }
-        OpenSet openSet = new OpenSet();
-        ClosedSet closedSet = new ClosedSet();
-        Map<BlockPos, BlockPos> cameFrom = new HashMap<>();
-        Map<BlockPos, Double> gCosts = new HashMap<>();
-        double startH = goal.heuristicCost(start);
-        openSet.add(new Node(start, new MovementType(MovementKeys.WALK), 0, startH));
-        gCosts.put(start, 0.0);
+
+        HashMap<Long, SearchNode> nodes = new HashMap<>();
+        BinaryHeapOpenSet openSet = new BinaryHeapOpenSet();
+        long deadline = System.currentTimeMillis() + maxComputeMs;
+        int iterations = 0;
+
+        SearchNode startNode = getOrCreate(nodes, start);
+        startNode.gCost = 0;
+        startNode.hCost = goal.heuristicCost(start);
+        openSet.insert(startNode);
+
         while (!openSet.isEmpty()) {
-            Node current = openSet.poll();
-            if(current == null) {
-                lastStatus = PathStatus.UNREACHABLE;
-                return Collections.emptyList();
-            }
-            BlockPos currentPos = current.pos();
-            if (goal.isReached(currentPos)) {
-                lastStatus = PathStatus.FOUND;
-                return reconstructPath(cameFrom, currentPos);
-            }
-            if (closedSet.contains(currentPos)) {
-                continue;
-            }
-            closedSet.add(currentPos);
-            if (closedSet.size() >= maxNodes) {
+            if ((iterations & 63) == 0 && System.currentTimeMillis() >= deadline) {
                 lastStatus = PathStatus.TIMEOUT;
+                nodesExplored = iterations;
                 return Collections.emptyList();
             }
-            processNeighbors(current, goal, openSet, closedSet, cameFrom, gCosts);
+            iterations++;
+
+            SearchNode current = openSet.removeMin();
+            current.heapPosition = -1;
+
+            if (goal.isReached(current.pos)) {
+                lastStatus = PathStatus.FOUND;
+                nodesExplored = iterations;
+                return reconstructPath(current);
+            }
+
+            for (NeighborMove move : graph.getNeighbors(current.pos)) {
+                SearchNode neighbor = getOrCreate(nodes, move.to());
+                if (neighbor.isClosed()) continue;
+
+                double tentativeG = current.gCost + move.edgeCost();
+                if (tentativeG >= neighbor.gCost) continue;
+
+                neighbor.gCost = tentativeG;
+                neighbor.hCost = goal.heuristicCost(move.to());
+                neighbor.parent = current;
+
+                if (neighbor.isOpen()) {
+                    openSet.update(neighbor);
+                } else {
+                    openSet.insert(neighbor);
+                }
+            }
         }
+
         lastStatus = PathStatus.UNREACHABLE;
+        nodesExplored = iterations;
         return Collections.emptyList();
     }
 
-    private void processNeighbors(@NotNull Node current, @NotNull IGoal goal,
-            @NotNull OpenSet openSet, @NotNull ClosedSet closedSet,
-            @NotNull Map<BlockPos, BlockPos> cameFrom, @NotNull Map<BlockPos, Double> gCosts) {
-        for (Node neighbor : graph.getNeighbors(current)) {
-            BlockPos neighborPos = neighbor.pos();
-            double newG = neighbor.gCost();
-            boolean shouldSkip = closedSet.contains(neighborPos)
-                    || newG >= gCosts.getOrDefault(neighborPos, Double.MAX_VALUE);
-            if (shouldSkip) continue;
-            gCosts.put(neighborPos, newG);
-            cameFrom.put(neighborPos, current.pos());
-            double h = goal.heuristicCost(neighborPos);
-            openSet.add(new Node(neighborPos, neighbor.movementType(), newG, h));
+    private @NotNull SearchNode getOrCreate(@NotNull HashMap<Long, SearchNode> nodes,
+            @NotNull BlockPos pos) {
+        long key = pos.asLong();
+        SearchNode node = nodes.get(key);
+        if (node == null) {
+            node = new SearchNode(pos);
+            nodes.put(key, node);
         }
+        return node;
     }
 
-    private @NotNull List<BlockPos> reconstructPath(
-            @NotNull Map<BlockPos, BlockPos> cameFrom, @NotNull BlockPos current) {
+    private @NotNull List<BlockPos> reconstructPath(@NotNull SearchNode goal) {
         List<BlockPos> path = new ArrayList<>();
-        BlockPos node = current;
-        while (node != null) {
-            path.add(node);
-            node = cameFrom.get(node);
+        SearchNode current = goal;
+        while (current != null) {
+            path.add(current.pos);
+            current = current.parent;
         }
         Collections.reverse(path);
         return path;
@@ -92,5 +105,9 @@ public final class AStarSearch {
 
     public @NotNull PathStatus getLastStatus() {
         return lastStatus;
+    }
+
+    public int getNodesExplored() {
+        return nodesExplored;
     }
 }
